    it is installed properly for systemd. Thanks to Christos Trochalakis.
  * Set debian/compat to 9 and updated debhelper dependency.

  [ Christos Trochalakis ]
  * debian/rules, debian/nginx-common.dirs,
    debian/debian-common.nginx.logrotate:
    + Switch to dh_installlogrotate.
  * debian/rules:
    + *-stamp files are deleted by dh_clean.
    + Remove unused mime-types target.

 -- Kartik Mistry <kartik@debian.org>  Fri, 11 Oct 2013 20:46:27 +0530

nginx (1.4.3-1) unstable; urgency=low

  [ Cyril Lavier ]
  * debian/nginx-naxsi-ui.postinst, debian/nginx-naxsi-ui.preinst:
    + Added missing arguments to have clean postinst/preinst scripts.
  * debian/conf/fastcgi_params:
    + Defined fastcgi param HTTPS the same as upstream default.
      (Closes: #712989)

  [ Michael Lustfield ]
  * conf/sites-available/default:
    + Removed /doc/ section per bug #715804.

  [ Christos Trochalakis ]
  * New upstream release. (Closes: #722640)
  * debian/nginx-common.nginx.init:
    + Better pidfile extraction from nginx.conf. We now accept multiple
      spaces and tabs as a field separator.
  * debian/modules/nginx-auth-pam:
    + Fixed upstream bug. (Closes: #721702)
  * debian/watch:
    + Only check for stable releases.
  * debian/conf/sites-available/default:
    + Correctly fallback to 404 when the requested file is missing.
      (Closes: #724232)
  * debian/logrotate:
    + Gracefully handle empty pidfile in logrotate script.
      (Closes: #696797)

  [ Kartik Mistry ]
  * Switch to dh-systemd (Closes: #713853)

 -- Kartik Mistry <kartik@debian.org>  Thu, 10 Oct 2013 17:28:56 +0530

nginx (1.4.1-3) unstable; urgency=low

  [ Kartik Mistry ]
  * debian/control:
    + Changed libgd2-dev build-dep to libgd2-dev|libgd2-noxpm-dev allow
      backporting (Closes: #711505)

  [ Cyril Lavier ]
  * debian/nginx-naxsi-ui.preinst
    + Added argument "install" to the preinst script. (Closes: #711590)

 -- Kartik Mistry <kartik@debian.org>  Sun, 09 Jun 2013 13:07:52 +0530
