@@ -22,7 +22,6 @@ ifeq ($(DEB_BUILD_ARCH),sparc)
 	CONFIGURE_OPTS = --with-cc-opt="-m32 -mcpu=ultrasparc"
 endif
 
-
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	ifeq (${NUMJOBS}, 0)
@@ -30,18 +29,6 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	endif
 else
 	NUMJOBS = 1
-endif
-
-config.sub:
-	dh_testdir
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-		cp -f /usr/share/misc/config.sub config.sub
-endif
-
-config.guess:
-	dh_testdir
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-		cp -f /usr/share/misc/config.guess config.guess
 endif
 
 config.env.%:
@@ -54,7 +41,7 @@ config.env.%:
 	cp -Pa $(CURDIR)/src $(BUILDDIR_$*)/
 	cp -Pa $(CURDIR)/man $(BUILDDIR_$*)/
 
-config.status.full: config.env.full config.sub config.guess
+config.status.full: config.env.full
 	cd $(BUILDDIR_full) && CFLAGS="$(CFLAGS)" CORE_LINK="$(LDFLAGS)" ./configure  \
 	    --prefix=/usr/share/nginx \
 	    --conf-path=/etc/nginx/nginx.conf \
@@ -90,7 +77,7 @@ config.status.full: config.env.full config.sub config.guess
             $(CONFIGURE_OPTS) >$@
 	touch $@
 
-config.status.light: config.env.light config.sub config.guess
+config.status.light: config.env.light
 	cd $(BUILDDIR_light) && CFLAGS="$(CFLAGS)" CORE_LINK="$(LDFLAGS)" ./configure  \
 	    --prefix=/usr/share/nginx \
 	    --conf-path=/etc/nginx/nginx.conf \
@@ -121,7 +108,7 @@ config.status.light: config.env.light config.sub config.guess
             $(CONFIGURE_OPTS) >$@
 	touch $@
 
-config.status.extras: config.env.extras config.sub config.guess
+config.status.extras: config.env.extras
 	cd $(BUILDDIR_extras) && CFLAGS="$(CFLAGS)" CORE_LINK="$(LDFLAGS)" ./configure  \
 	    --prefix=/usr/share/nginx \
 	    --conf-path=/etc/nginx/nginx.conf \
@@ -170,7 +157,7 @@ config.status.extras: config.env.extras config.sub config.guess
             $(CONFIGURE_OPTS) >$@
 	touch $@
 
-config.status.naxsi: config.env.naxsi config.sub config.guess
+config.status.naxsi: config.env.naxsi
 	cd $(BUILDDIR_naxsi) && CFLAGS="$(CFLAGS)" CORE_LINK="$(LDFLAGS)" ./configure  \
 	    --prefix=/usr/share/nginx \
 	    --conf-path=/etc/nginx/nginx.conf \
@@ -228,7 +215,6 @@ build: build-indep build-arch
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f config.sub config.guess
 	dh_clean
 	rm -rf $(CURDIR)/debian/build-*
 
