@@ -12,6 +12,7 @@ nginx (1.4.3-2) UNRELEASED; urgency=low
   * debian/rules:
     + *-stamp files are deleted by dh_clean.
     + Remove unused mime-types target.
+    + Remove not needed config.sub and config.guess targets.
 
  -- Kartik Mistry <kartik@debian.org>  Fri, 11 Oct 2013 20:46:27 +0530
 
